- NEW: Added the Kernel Density metric `$density` to the `$summary` table for the `"linear"` method. This allows you to see how the results are ranked in regards to KDE (also present for other methods, but as an empty column).
- NEW: Plot updated with title showing the Rank of the current plot. It also now plots oxygen and rate against both time and row index.
- NEW: Plot has `rate.rev` input controlling plotting of the y-axis of the rolling rate plot. Default is `TRUE`, which means oxygen uptake rates will appear higher on the plot despite being lower numerically (i.e. more negative). Change this to `FALSE` to plot strictly numerically, if for instance you are examining oxygen production so that higher production rates are higher.
- NEW: S3 Generics: `plot()` has the additional inputs `panel` to plot selected panels individually, and `legend` to suppress the legend and other labels.

- FIX: `plot()` works correctly on `auto_rate` objects (missing #' @export)
- FIX: Fix for stopping with an obscure message when input datasets are small (Issue #58).
- FIX: Removed unused method `"default"` (Issue #66)
- FIX: Fix for plots failing where result contains an `NA` (fix in multi.p() involving clip)
- FIX: Fix for `auto_rate` failing to work when there were `NA` in the time data. (due to range() failing to return a range (returns c(NA,NA). It needs `na.rm = TRUE` or na.omit() on the data. Many other fns like sum() and mean() fail in the same way, so similar errors may occur in other places. In general data with NAs needs further testing.)
- FIX: `method = "max"` was missing `$total_regs` element from metadata