@@ -106,6 +106,7 @@ Function specific changes:
 - NEW `maximum` and `minimum` methods. These work the *opposite* way to `min` and `max` from v1.1. These are strictly numerical, and order by value accounting for the sign. The `min`and `max` methods still produce same results as in v1.1 but have a prominent warning. These will be deprecated in a later version of `respR`.
 - (New internal functions for this ordering - `auto_rate_lowest`, `auto_rate_highest`. Therefore internal functions `auto_rate_min` and `auto_rate_max` have been swapped around in terms of functionality).
 - NEW: Added the Kernel Density metric `$density` to the `$summary` table for the `"linear"` method. This allows you to see how the results are ranked in regards to KDE (also present for other methods, but as an empty column).
+- NEW: Added `$oxy` and `$endoxy` to the `$summary` table, so you can easily see roughly how much of an oxygen change each regression is using to calculate a rate. This also matches the summary table in `calc_rate`
 - NEW: Plot updated with title showing the Rank of the current plot. It also now plots oxygen and rate against both time and row index.
 - NEW: Plot has `rate.rev` input controlling plotting of the y-axis of the rolling rate plot. Default is `TRUE`, which means oxygen uptake rates will appear higher on the plot despite being lower numerically (i.e. more negative). Change this to `FALSE` to plot strictly numerically, if for instance you are examining oxygen production so that higher production rates are higher.
 - NEW: S3 Generics: `plot()` has the additional inputs `panel` to plot selected panels individually, and `legend` to suppress the legend and other labels.
